fixtures/grammar/reject/mapping-sequence-mix.fm
---
mixed:
  key: value
  - other
---
Vera Example
